creating form to add restaurants

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -7,5 +7,5 @@
 <%else%>
 	No restaurants were added
 <%end%>
-	
-<a href='#'>Add a restaurant</a>
+<%= link_to 'Add a restaurant', new_restaurant_path %>	
+<!-- <a href='#'>Add a restaurant</a> -->
