--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -6,8 +6,14 @@
 	<%= link_to "Show #{restaurant.name}", restaurant_path(restaurant) %>
 	<%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant)%>
 		<ul>
-		<%= restaurant.reviews.each do |review| %>
-		<li> <%= "#{review.thoughts} (#{review.rating})"%></li>
+		<% restaurant.reviews.each do |review| %>
+		<li> <%= "#{review.thoughts} (#{review.rating})"%>
+		<em>posted:<%= time_ago_in_words(review.created_at)%> ago</em>
+		<%= link_to "Endorse this review", review_endorsements_path(review), class: 'endorsements-link'%>
+		<span class='endorsements_count'>
+			<%= pluralize(review.endorsements.count, "endorsement") %>
+		</span>
+		</li>
 		<%end%>
 		<h3>Average rating: <%= star_rating(restaurant.average_rating) %></h3>
 		</ul>
