--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -10,7 +10,7 @@
 <% end %>
 
 
-<%= form_for @restaurant do |f| %>
+<%= form_for @restaurant, :html => { :multipart => true } do |f| %>
 <%= f.label :name %>
 <%= f.text_field :name %>
 <%= f.submit %>
