--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -4,7 +4,9 @@
 	<%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
 	<%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
 	<%= link_to "Show #{restaurant.name}", restaurant_path(restaurant) %>
+	<span class ="review-link">
 	<%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant)%>
+	</span>	
 		<ul>
 		<% restaurant.reviews.each do |review| %>
 		<li> <%= "#{review.thoughts} (#{review.rating})"%>
